Implemented basic and extremely ugly mysql connection for querying metrics

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 *.so
 *.dylib
 
+# MySQL connection password file
+pw/
+
+# IDEA configs
+.idea/
+
 # Test binary, build with `go test -c`
 *.test
 
